fix z-index issue where newGameBtns render above rule/blog slideouts at smaller widths

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ body {
     overflow-y: auto;
     position: absolute;
     right: 0;
+    z-index: 1;
 
     transition: right 500ms;
 }
